Added application icon and description

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,5 @@ projectName = pwa
 appName = com.enonic.starter.pwa
 displayName = PWA Starter Kit
 xpVersion = 6.10.0
-version = 1.0.0
+version = 1.0.0-SNAPSHOT
+
