--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     include "com.enonic.xp:lib-content:${xpVersion}"
     include "com.enonic.xp:lib-portal:${xpVersion}"
     include "com.enonic.xp:lib-mustache:${xpVersion}"
+    include "com.enonic.xp:lib-io:${xpVersion}"
 }
 
 repositories {
