--- a/src/main/resources/lib/pwa/manifest.json
+++ b/src/main/resources/lib/pwa/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "PWA Starter by Enonic",
-  "short_name": "PWA Starter",
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
-  "display": "fullscreen",
-  "start_url": "{{siteUrl}}app?source=web_app_manifest",
+  "name": "{{name}}",
+  "short_name": "{{shortName}}",
+  "theme_color": "{{themeColor}}",
+  "background_color": "{{backgroundColor}}",
+  "display": "{{display}}",
+  "start_url": "{{siteUrl}}?source=web_app_manifest",
   "icons": [
     {
       "src": "{{iconUrl}}/android-chrome-192x192.png",
