--- a/src/main/resources/lib/pwa/manifest.json
+++ b/src/main/resources/lib/pwa/manifest.json
@@ -7,12 +7,12 @@
   "start_url": "{{siteUrl}}?source=web_app_manifest",
   "icons": [
     {
-      "src": "{{iconUrl}}/android-chrome-192x192.png",
+      "src": "{{icons.png_192}}",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "{{iconUrl}}/android-chrome-512x512.png",
+      "src": "{{icons.png_512}}",
       "sizes": "512x512",
       "type": "image/png"
     }
