--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,5 @@ npm-debug.log
 .tmp
 generated-java
 classes/
-src/resources/assets/*.js
-src/resources/assets/*.css
+src/main/resources/assets/*.js
+src/main/resources/assets/*.css
