--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "style-loader": "^0.13.1",
-    "webpack": "^3.0.0",
-    "workbox-webpack-plugin": "^1.1.0"
+    "webpack": "^3.0.0"
   }
 }
