Made the app work even when site config is empty. Use site name as app's name/short name in manifest.json when it's not set up in the config.

--- a/src/main/resources/assets/precache/manifest.json
+++ b/src/main/resources/assets/precache/manifest.json
@@ -4,8 +4,9 @@
   "theme_color": "{{themeColor}}",
   "background_color": "{{backgroundColor}}",
   "display": "{{display}}",
-  "start_url": "{{siteUrl}}?source=web_app_manifest",
-  "icons": [
+  "start_url": "{{siteUrl}}?source=web_app_manifest"
+{{#hasAppIcon}}
+  ,"icons": [
     {
       "src": "{{icons.png_192}}",
       "sizes": "192x192",
@@ -17,4 +18,5 @@
       "type": "image/png"
     }
   ]
+{{/hasAppIcon}}
 }
